# faculdade

./: CMakeLists.txt  dados.txt  teste.c  teste2.c  teste_ponteiro.c
AED/: ArvoreAVL.h
AED/2020/T2/: T2Programa.c  entrada.txt
AED/2020/Trabalho1/: Trab1AED.c
AED/Arvores/: ArvoreB.c
AED/Listas/: Lista0
AED/Listas/Lista1/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c
AED/Prova1/: prova1.c
AED/Prova2/: P2GustavoGoncalvesQueiroz.c
AED/T2/: Programa.c  T2Programa.c  c  dados  entrada.txt
AED/Trab2/: DADOS.txt  arvoreB.h  arvoreBArq.c  arvoreBArq.h  arvoreBTrab.c  arvoreBTrab.h  listaEncadeadaArquivo.c  listaEncadeadaArquivo.h  listaSimplesArquivo.c  listaSimplesArquivo.h  main.c  mainTrab2AED.c  script.txt  trab2.c  trab2.h  trab2AED.c  trab2AED.h
AED/Trab3/: arvoreTRIE_TST.c  arvoreTRIE_TST.h  dicionario.txt  mainTrab3AED.c  stopwords.txt  trab3AED.c  trab3AED.h
AED/Trabalho1/: Backup.txt
AED/TrabalhoMatrizEsparsa_GustavoQueiroz_JoaoOrtega/: main.c  matrizEsparsa.c  matrizEsparsa.h
Compuatcao_2/: Lista1.rar
Compuatcao_2/12-03-RECURSIVIDADE/Exercicios/: 01.cpp  02.c  04.c  05.c  06.c
Compuatcao_2/Lista1/: 10_lista1.c  11_lista1.c  12_lista1.c  16_lista1.c  17_lista1.c  18_lista1.c  19_lista1.c  1_lista1.c  21_lista1.c  23_lista1.c  24_lista1.c  2_lista1.c  5_lista1.c  7_lista1.c
Compuatcao_2/Prova1/: 2.cpp
Compuatção_2/12-03-RECURSIVIDADE/: Teoria.cpp
Compuatção_2/12-03-RECURSIVIDADE/Exercicios/: 01.cpp  03.c
Compuatção_2/Lista1/: 13_lista1.c  14_lista1.c  15_lista1.c  15_lista1_Inc.c  1_lista1.c  20_lista1.c  22_lista1.c  25_lista1.c  26_lista1.c  3_lista1.c  4_lista1.c  5_lista1.c  6_lista1.c  8_lista1.c  9_lista1.c
Compuatção_2/Prova1/: 1.cpp
Computacao/: funcoes.h  matriz.h  string.h  vetor.h
Computacao/Eliane/19-11-2019/: Programa.c  consumo.txt
Computacao/Eliane/29-10-2019_Atividade-IPVA/: IPVA_Unfinished.c
Computacao/Eliane/Lista string/: 01.c  02.c  03.c  04.c
Computacao/Eliane/Lista-30-09/: 01.c  02.c  03.c  04.c  teste
Computação/: funcoes.h
EAD/Trabalho1/: Backup.txt  Programa.c  entrada.txt
IES/P1/: Progresso.txt  WikiFilmesCodigo.c  dados.txt  input.txt  teste.txt  usuarios.txt  videos.txt
IES/TRAB1/: Trab1.c  WikiFilmesCodigo.c  log.txt  usuarios.txt  videos.txt
LFA/trab1/: 1.txt  Codigo.c  Trab1.c  dados.txt  dados2.txt  relatorio.txt  relatorio2.txt  teste.c
LM/: test.asm
NEPS/: 2.cpp  266.cpp  3.cpp
Outros/: 1.c  2.c  3.c  4.c  teste.c  teste.js
Outros/Java/: teste.js
SD/: Converter.c
URI/: 2313.c  teste
URI/C/: 1001.c  1024.c  1047.c  1049.c  1059.c  1060u.c  1075.c  1094.c  1115.c  1131.c  1134.c  1143.c  1153.c  1160 (nao terminado).c  1160.c  1182.c  1185.c  1187.c  1253.c  1255.c  1262.c  1272.c  1435.c  1534.c  1541.c  1562(Runtime-error).c  1562.c  1562_Unfinished.c  2062.c  compiling_error.txt
URI/C++/: 1847.cpp
(+208 files in other folders)
